# g4bl_suite

./: .gitignore  .readthedocs.yaml  404.html  LICENSE  Pion_Line_BeamEllipse.g4bl  Pion_Line_BeamEllipse.out  README.md  README.rst  automator.sh  build.sh  code.ipynb  compile-all.sh  docker-compose.yml  g4beamline.root  g4blplot.py  index.html  local-run-all.sh  local-runall.sh  main.py  mkdocs.yml  negative_ellipse_detector_8.txt  objects.inv  off_uniform_.0005_rad_detector_8.txt  off_uniform_.0010_rad_detector_8.txt  off_uniform_.0015_rad_detector_8.txt  off_uniform_.0020_rad_detector_8.txt  off_uniform_.0025_rad_detector_8.txt  off_uniform_.0030_rad_detector_8.txt  off_uniform_.0035_rad_detector_8.txt  off_uniform_.0040_rad_detector_8.txt  off_uniform_.0045_rad_detector_8.txt  off_uniform_.0050_rad_detector_8.txt  on_uniform_.0005_rad_detector_8.txt  on_uniform_.0010_rad_detector_8.txt  on_uniform_.0015_rad_detector_8.txt  on_uniform_.0020_rad_detector_8.txt  on_uniform_.0025_rad_detector_8.txt  on_uniform_.0030_rad_detector_8.txt  on_uniform_.0035_rad_detector_8.txt  on_uniform_.0040_rad_detector_8.txt  (+7 more)
Automator.reference/: index.html
Beam shape/: 1_detector_8.txt  2_detector_8.txt  3_detector_8.txt  4_detector_8.txt  5_detector_8.txt  6_detector_8.txt  beam_shape.ipynb  negative_sigma_angle_ellipse_detector_8.txt  negative_sigma_angle_gaussian_detector_8.txt  positive_ellipse_detector_8.txt  positive_sigma_angle_gaussian_detector_8.txt
DataAnalyzer.reference/: index.html
GlobalVariables.reference/: index.html
Report_Jan24_2023/: 5_detector_8.txt  Pion_Line_BeamEllipse.g4bl  g4blplot.py  report.ipynb
about/: index.html
automation/: index.html
configuration/: index.html
data/: uniform_.0005_rad_detector_8.txt  uniform_.0010_rad_detector_8.txt  uniform_.0015_rad_detector_8.txt  uniform_.0020_rad_detector_8.txt  uniform_.0025_rad_detector_8.txt  uniform_.0030_rad_detector_8.txt  uniform_.0035_rad_detector_8.txt  uniform_.0040_rad_detector_8.txt  uniform_.0045_rad_detector_8.txt  uniform_.0050_rad_detector_8.txt
development/: index.html
docs/: Automator.reference.md  DataAnalyzer.reference.md  GlobalVariables.reference.md  about.md  conf.py  configuration.md  development.md  docker_demo.md  g4blplot.reference.md  index.md  installation.md
feb10 gaussianP noStraw SmallRadiusDetector/: Pion_Line_BeamEllipse.g4bl  main.py
feb10 gaussianP nostraw 50mmDet/: Pion_Line_BeamEllipse.g4bl  ProtonsOnTarget.g4bl  main.py
feb10 gaussianP straw/: Pion_Line_BeamEllipse.g4bl  data.tar.xz  g4blplot.py  main.py
installation/: index.html
presentation/: slides_presentation.md
remembrance/: index.html
src/: main.py  (+3 more)
(+49 files in other folders)
