[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["g4blplot"]

[project]
name = "jjsm-fermi"
authors = [
  { name="Jasmine Tang", email="tanghocle456@gmail.com" },
]
description = "A small G4beamline scripting package"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "matplotlib==3.6.3",
  "mpl-scatter-density==0.7",
  "numpy==1.24.2",
  "pytest==7.2.1",
  "tqdm==4.64.1",
  "build==0.10.0",
  "pandas==2.0.2",
  "pika==1.3.1",
  "mkdocstrings[python]",
  "mkdocs-material",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix"
]

[project.urls]
"Homepage" = "https://github.com/badumbatish/fermi_proj"
"Bug Tracker" = "https://github.com/badumbatish/fermi_proj/issues"


[tool.mypy]
ignore_missing_imports = true
