[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["g4blplot"]

[project]
name = "jjsm-fermi"
version = "1.0.1"
authors = [
  { name="Jasmine Tang", email="tanghocle456@gmail.com" },
]
description = "A small G4beamline scripting package"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "matplotlib",
  "mpl-scatter-density",
  "numpy",
  "pytest",
  "tqdm",
  "build",
  "pandas",
  "pika",
  "mkdocstrings[python]",
  "mkdocs-material",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix"
]

[project.urls]
"Homepage" = "https://github.com/badumbatish/fermi_proj"
"Bug Tracker" = "https://github.com/badumbatish/fermi_proj/issues"

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]


[tool.mypy]
ignore_missing_imports = true
